Updated User lang

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,5 +2,79 @@
   "mainMenu market": "Market",
   "mainMenu economicCalendar": "Economic Calendar",
   "mainMenu operations": "Operations",
-  "mainMenu logout": "LogOut"
+  "mainMenu logout": "LogOut",
+
+  "btn exportAccountInformation": "Export Account Information",
+  "btn historicalOperationOTCReport": "Historical OTC Operation Report",
+  "btn exportAccountStatement": "Export Account Statement",
+  "btn referral": "Referral",
+  "btn search": "Search",
+  "btn clean": "Clean",
+
+  "title marketOperations": "Market Operations OTC",
+
+  "sharedAccount": "Shared Account",
+  "allOperations": "All Operations",
+  "soldOperations": "Sold Operations",
+  "accountsDetail": "Accounts Detail",
+  "accountStatement": "Account Statement",
+  "dateReport": "Report Date",
+  "summary": "Summary",
+  "transactions": "Transactions",
+  "totalOperations": "Total Operations",
+
+  "fileName accountReport": "account_report",
+
+  "status hold": "Hold",
+  "status close": "Close",
+  "status marketClose": "Market Close",
+  "status sold": "Sold",
+  "status active": "Active",
+
+  "accountInformation": "Account Information",
+  "accountType": "Account Type",
+  "accountValue": "Account Amount",
+  "profitCommission": "Profit Commission",
+  "availableGuarantees": "Available Guarantees",
+  "guaranteesCredits": "Guarantees / Credits",
+  "marginUsed": "Margin Used",
+  "commissionsByReference": "Commissions by Reference",
+  "initialAmount": "Initial Amount",
+  "createdAt": "Created At",
+  "updatedAt": "Updated At",
+  "debit": "Debit",
+  "credit": "Credit",
+  "detail": "Detail",
+  "date": "Date",
+  "status": "Status",
+  "endDate": "End Date",
+  "active": "Active",
+  "ls": "L/S",
+  "quantity": "Quantity",
+  "buyPrice": "Buy Price",
+  "takingProfit": "Taking Profit",
+  "stopLost": "Stop/Lost",
+  "investment": "Investment",
+  "balanceGP": "Balance (G/P)",
+  "movementGP": "Movement (G/P)",
+  "order": "Order",
+  "broker": "Broker",
+  "closeAmount": "End Amount",
+  "guarantees": "Guarantees",
+  "commission": "Commission",
+  "hold": "Hold",
+  "profitNet": "Profit Net",
+  "profit": "Profit",
+  "endAmount": "End Amount",
+  "bankTransfers": "Bank Transfers",
+  "previewsAmount": "Previous Amount",
+  "interestType": "Interest Type",
+  "product": "Product",
+  "derivative": "Derivative",
+  "currentAmount":"Current Amount",
+  "maintenanceMargin": "Maintenance Margin",
+
+  "username": "Username",
+  "firstName": "Name",
+  "lastName": "Last Name"
 }
