--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -2,5 +2,79 @@
   "mainMenu market": "Mercado",
   "mainMenu economicCalendar": "Calendário Econômico",
   "mainMenu operations": "Operações",
-  "mainMenu logout": "Sair"
+  "mainMenu logout": "Sair",
+
+  "btn exportAccountInformation": "Exportar Dados da Conta",
+  "btn historicalOperationOTCReport": "Histórico Operações do Mercado OTC",
+  "btn exportAccountStatement": "Exportar extrato da conta",
+  "btn referral": "Referral",
+  "btn search": "Procurar",
+  "btn clean": "Limpiar",
+
+  "title marketOperations": "Operações do mercado de ações OTC",
+
+  "sharedAccount": "Shared Account",
+  "allOperations": "Todas as Operações",
+  "soldOperations": "Operações vendidas",
+  "accountsDetail": "Detalhe da conta",
+  "accountStatement": "Extrato da conta",
+  "dateReport": "Data do relatório",
+  "summary": "Caixa de Resumo",
+  "transactions": "Transações",
+  "totalOperations": "Operações Totais",
+
+  "fileName accountReport": "relatorio_conta",
+
+  "status hold": "Hold",
+  "status close": "Fechado",
+  "status marketClose": "Market Close",
+  "status sold": "Vendido",
+  "status active": "Ativo",
+
+  "accountInformation": "Informação da conta",
+  "accountType": "Tipo de conta",
+  "accountValue": "Valor da conta",
+  "profitCommission": "Comissão sobre os ganhos",
+  "availableGuarantees": "Garantias disponíveis",
+  "guaranteesCredits": "Garantias / Créditos",
+  "marginUsed": "Margem usada",
+  "commissionsByReference": "Comissões por referência",
+  "initialAmount": "Saldo Inicial",
+  "createdAt": "Data de abertura",
+  "updatedAt": "Fecha de actualización",
+  "debit": "Débito",
+  "credit": "Crédito",
+  "detail": "Detalhe",
+  "date": "Encontro",
+  "status": "Estado",
+  "endDate": "Data de término",
+  "active": "Activo",
+  "ls": "L/S",
+  "quantity": "Quantidade",
+  "buyPrice": "Preço de compra",
+  "takingProfit": "Taking Profit",
+  "stopLost": "Stop/Lost",
+  "investment": "Investimento",
+  "balanceGP": "Saldo (G/P)",
+  "movementGP": "Movimiento (G/P)",
+  "order": "Pedido",
+  "broker": "Corredor",
+  "closeAmount": "Saldo final",
+  "guarantees": "Garantias",
+  "commission": "Comissão",
+  "hold": "Hold",
+  "profitNet": "Lucro líquido",
+  "profit": "Ganancias",
+  "endAmount": "Saldo Final",
+  "bankTransfers": "Transferências bancárias",
+  "previewsAmount": "Saldo anterior",
+  "interestType": "Tipo de Interés",
+  "product": "Producto",
+  "derivative": "Derivado",
+  "currentAmount":"Saldo Atual",
+  "maintenanceMargin": "Margem de Manutenção",
+
+  "username": "Username",
+  "firstName": "Nome",
+  "lastName": "Sobrenome"
 }
