--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -2,5 +2,79 @@
   "mainMenu market": "Mercado",
   "mainMenu economicCalendar": "Calendario Económico",
   "mainMenu operations": "Operaciones",
-  "mainMenu logout": "Salir"
+  "mainMenu logout": "Salir",
+
+  "btn exportAccountInformation": "Export Datos de la Cuenta",
+  "btn historicalOperationOTCReport": "Reporte Histórico Operaciones de Bolsa OTC",
+  "btn exportAccountStatement": "Exportar Estado de Cuenta",
+  "btn referral": "Referir",
+  "btn search": "Buscar",
+  "btn clean": "LImpiar",
+
+  "title marketOperations": "Operaciones de Bolsa OTC",
+
+  "sharedAccount": "Cuenta Conjunta",
+  "allOperations": "Todas las Operaciones",
+  "soldOperations": "Operaciones Vendidas",
+  "accountsDetail": "Detalle de Cuentas",
+  "accountStatement": "Estado de Cuenta",
+  "dateReport": "Date Report",
+  "summary": "Cuadro de Resumen",
+  "transactions": "Transacciones",
+  "totalOperations": "Total de Operaciones",
+
+  "fileName accountReport": "reporte_cuenta",
+
+  "status hold": "Hold",
+  "status close": "Cerrado",
+  "status marketClose": "Market Close",
+  "status sold": "Vendido",
+  "status active": "Activo",
+
+  "accountInformation": "Información de la Cuenta",
+  "accountType": "Tipo de cuenta",
+  "accountValue": "Valor de la cuenta",
+  "profitCommission": "Comisión sobre ganancias",
+  "availableGuarantees": "Garantías disponibles",
+  "guaranteesCredits": "Garantías / Créditos",
+  "marginUsed": "Margen utilizado",
+  "commissionsByReference": "Comisiones por referencia",
+  "initialAmount": "Saldo Inicial",
+  "createdAt": "Fecha de apertura",
+  "updatedAt": "Fecha de actualización",
+  "debit": "Débito",
+  "credit": "Crédito",
+  "detail": "Detalle",
+  "date": "Fecha",
+  "status": "Estado",
+  "endDate": "Fecha de cierre",
+  "active": "Activo",
+  "ls": "L/S",
+  "quantity": "Cantidad",
+  "buyPrice": "Precio de compra",
+  "takingProfit": "Taking Profit",
+  "stopLost": "Stop/Lost",
+  "investment": "Inversión",
+  "balanceGP": "Balance (G/P)",
+  "movementGP": "Movimiento (G/P)",
+  "order": "Orden",
+  "broker": "Corredor",
+  "closeAmount": "Saldo de cierre",
+  "guarantees": "Garantias",
+  "commission": "Comisión",
+  "hold": "Hold",
+  "profitNet": "Ganacia Neta",
+  "profit": "Ganancias",
+  "endAmount": "Saldo Final",
+  "bankTransfers": "Transferencias Bancarias",
+  "previewsAmount": "Saldo anterior",
+  "interestType": "Tipo de Interés",
+  "product": "Producto",
+  "derivative": "Derivado",
+  "currentAmount":"Saldo Actual",
+  "maintenanceMargin": "Margen de Mantenimiento",
+
+  "username": "Usuario",
+  "firstName": "Nombre",
+  "lastName": "Apellido"
 }
