--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -17,6 +17,11 @@
   "title investmentOperations": "Operações de fundos de juros",
   "title operationInformation": "Informação de Transação",
 
+  "actionMessage creatingTicket": "Criando Referral Ticket",
+  "actionMessage ticketCreated": "Referral Ticket criado",
+  "actionMessage noOperationFound": "Nenhuma negociação encontrada para esta conta",
+  "actionMessage downloadingHistoryReport": "Baixando relatório do histórico da conta",
+
   "sharedAccount": "Shared Account",
   "allOperations": "Todas as Operações",
   "soldOperations": "Operações vendidas",
