--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -12,6 +12,7 @@
   "btn clean": "LImpiar",
   "btn syncData": "Sincronizar Datos",
   "btn sendReference": "Enviar Referencia",
+  "btn wireTransferRequest": "Enviar Solicitud",
 
   "title marketOperations": "Operaciones de Bolsa OTC",
   "title investmentOperations": "Operaciones Fondo de Interés",
@@ -112,5 +113,11 @@
   "Collaborator": "Colaborador",
   "referredClientDescription": "Descripción del cliente referido",
 
-  "selectFilterType": "Seleccione el tipo de filtro"
+  "selectFilterType": "Seleccione el tipo de filtro",
+
+  "account": "Cuenta",
+  "amount": "Monto",
+  "amountNote": "Digite el monto a solicitar en Dólares Americanos",
+  "commissionsCharge": "Cobro de Comisiones",
+  "commissionsReferenceDetail": "Detalle de las referencias que generaron comisiones"
 }
