--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -36,6 +36,7 @@
   "noAccountDataFound": "No accounts associated with your name were found.",
   "requiredFieldMessage": "Please enter your",
   "notValidMessage": "Not valid value",
+  "requiredFieldGeneralMessage": "Required field",
   "yes": "Yes",
   "uploadFileIndicator": "Drag and drop or select a file",
   "uploadFileFormatValid": "Accepted file formats are: .pdf, .jpg y .png",
@@ -116,10 +117,29 @@
 
   "selectFilterType": "Select filter type",
 
+  "address": "Address",
   "account": "Account",
   "amount": "Amount",
-  "amountNote": "Enter the amount to request in American Dollars",
   "commissionsCharge": "Commissions Charge",
-  "commissionsReferenceDetail": "Detail of references that generated commissions"
+  "commissionsReferenceDetail": "Detail of references that generated commissions",
+
+  "wt amountNote": "Enter the amount to request in American Dollars",
+  "wt transferMethod": "Transfer Method",
+  "wt bank": "Bank",
+  "wt bankName": "Bank name",
+  "wt remittance": "Remittance",
+  "wt currencyType": "Transfer currency",
+  "wt accountWithdrawalRequest": "The fund withdrawal account",
+  "wt accountDetail": "Account Detail",
+  "wt beneficiary": "Beneficiary",
+  "wt intermediary": "Intermediary",
+  "wt beneficiaryMessage": "Details of the account you want to transfer",
+  "wt beneficiaryBankMessage": "Information of the bank that receives the funds",
+  "wt intermediaryBankMessage": "If you require an intermediary bank, please fulfilled this information",
+  "wt crossBankAccounts": "Cross Bank Accounts",
+  "wt paymentTimePolitics": "The range time for release funds is from 15 to 30 days, by multiple review of each transaction by the Exchange and its arbitration department.",
+  "wt paymentPolitics": "I accept (amos) and reconozco (reconocemos) that it is possible that a correspondent bank or another financial entity that intervenes in the transference / turnover by me (nosotros) requesting the defendant, if my country is abroad, can reject the transference / turnover and / or retain, block, penalize and / or freeze the objects subject to the request in compliance with the rules that are applicable (lax AML, OFAC, UN, etc.) and exonerate (exonerate) from liability to Royal Capital Broker in the banks that are used for the respective transfers, in the maximum terms administered by the applicable law, for any loss that the actions may cause (as they are).",
+  "wt agreementPaymentPolitics": "I understand the aforementioned about retreat periods"
+
 
 }
