--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -36,6 +36,7 @@
   "noAccountDataFound": "No se encontraron cuentas asociadas a su nombre.",
   "requiredFieldMessage": "Por favor ingrese su",
   "notValidMessage": "No es un valor válido",
+  "requiredFieldGeneralMessage": "Campo requerido",
   "yes": "Sí",
   "uploadFileIndicator": "Arrastre y suelte o seleccione un archivo",
   "uploadFileFormatValid": "Los formatos de archivo aceptados son: .pdf, .jpg y .png",
@@ -116,9 +117,28 @@
 
   "selectFilterType": "Seleccione el tipo de filtro",
 
+  "address": "Dirección",
   "account": "Cuenta",
   "amount": "Monto",
-  "amountNote": "Digite el monto a solicitar en Dólares Americanos",
   "commissionsCharge": "Cobro de Comisiones",
-  "commissionsReferenceDetail": "Detalle de las referencias que generaron comisiones"
+  "commissionsReferenceDetail": "Detalle de las referencias que generaron comisiones",
+
+  "wt amountNote": "Digite el monto a solicitar en Dólares Americanos",
+  "wt transferMethod": "Método de transferencia",
+  "wt bank": "Banco",
+  "wt bankName": "Nombre del Banco",
+  "wt remittance": "Remesa",
+  "wt currencyType": "Moneda de Transferencia",
+  "wt accountWithdrawalRequest": "La cuenta para retiro de fondos",
+  "wt accountDetail": "Detalles de Cuenta",
+  "wt beneficiary": "Beneficiario",
+  "wt intermediary": "Intermediario",
+  "wt beneficiaryMessage": "Detalles de la cuenta a la que quiere transferir",
+  "wt beneficiaryBankMessage": "Información del banco que recibe los fondos",
+  "wt intermediaryBankMessage": "En caso de requerir banco intermediario, por favor agregar los datos",
+  "wt crossBankAccounts": "Cuenta entre bancos",
+  "wt paymentTimePolitics": "Tiempo de liberación de fondos de 15 a 30 días, por revisión múltiple de cada transacción por parte del Exchange y su departamento de arbitraje.",
+  "wt paymentPolitics": "Acepto (amos) y reconozco (reconocemos) que es posible que un banco corresponsal u otra entidad financiera que intervenga en la transferencia/giro por mi (nosotros) solicitando o requerido, sea de mi pais o del exterior, pueda rechazar la transferencia/giro y/o retener, bloquear, penalizar y/o congelar los fondos objeto de la solicitud en cumplimiento de las normas que le sean aplicables (lavado de activos AML, OFAC, ONU, etc) y exonero (exoneramos) de responsabilidad a Royal Capital como Broker y a los bancos que se utilicen para las transferencias respectivas, en los maximos terminos adminitidos por la ley aplicable, por cualquier perjuicio que dichas acciones puedan ocacionarme (ocacionarnos). ",
+  "wt agreementPaymentPolitics": "Entiendo lo anteriormente mencionado sobre los periodos de retiro"
+
 }
