--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -142,6 +142,7 @@
   "wt paymentPolitics": "Acepto (amos) y reconozco (reconocemos) que es posible que un banco corresponsal u otra entidad financiera que intervenga en la transferencia/giro por mi (nosotros) solicitando o requerido, sea de mi pais o del exterior, pueda rechazar la transferencia/giro y/o retener, bloquear, penalizar y/o congelar los fondos objeto de la solicitud en cumplimiento de las normas que le sean aplicables (lavado de activos AML, OFAC, ONU, etc) y exonero (exoneramos) de responsabilidad a Royal Capital como Broker y a los bancos que se utilicen para las transferencias respectivas, en los maximos terminos adminitidos por la ley aplicable, por cualquier perjuicio que dichas acciones puedan ocacionarme (ocacionarnos). ",
   "wt agreementPaymentPolitics": "Entiendo lo anteriormente mencionado sobre los periodos de retiro",
   "wt disabledWeekendBtn":  "Los bancos no operan fines de semana, por favor procese su orden al siguiente día hábil laboral",
-  "wt disabledBtn": "No ha cumplido con el tiempo requerido para realizar la solicitud de dinero."
+  "wt disabledBtn": "No ha cumplido con el tiempo requerido para realizar la solicitud de dinero.",
+  "wt disabledBtnHoliday": "Estimado inversionista, durante esta semana de Pascua o Semana Santa no se recibirán solicitudes de transferencia, por favor realice su solicitud a partir del lunes 5 de Abril"
 
 }
