--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -142,6 +142,7 @@
   "wt paymentPolitics": "Acepto (amos) y reconozco (reconocemos) que é possível que um banco corresponsal u otra entidad financiera que intervenga en la transferencia / giro por mi (nosotros) solicitando o requerido, mar de mi pais o del exterior, pueda rechazar la transferencia / giro y / o retener, bloquear, penalizar e / o congelar os fondos objeto de la solicitação en cumplimiento de las normas that le sean aplicables (lavado de ativos AML, OFAC, ONU, etc) y exonero (exoneramos) de responsabilidad a Royal Capital Broker ya los bancos que se utilicen to las transferencias excelentes, en los maximos terminos adminitidos por la ley aplicable, por cualquier perjuicio que dichas acciones puedan ocacionarme (ocacionarnos).",
   "wt agreementPaymentPolitics": "Entiendo lo anteriormente usado sobre los periodos de retiro",
   "wt disabledWeekendBtn":  "Os bancos não funcionam nos fins de semana, processe seu pedido no próximo dia útil",
-  "wt disabledBtn": "Você não cumpriu o tempo necessário para fazer a solicitação de dinheiro."
+  "wt disabledBtn": "Você não cumpriu o tempo necessário para fazer a solicitação de dinheiro.",
+  "wt disabledBtnHoliday": "Caro investidor, durante esta semana de Páscoa ou Semana Santa não serão recebidos pedidos de repasse, faça o seu pedido a partir de segunda-feira, 5 de abril"
 
 }
