--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -110,6 +110,7 @@
   "city": "Cidade",
   "occupation": "Ocupação",
   "buyBrokerGuarantee": "Compra Broker Guarantee",
+  "brokerName": "Nome do corretor que você deseja atribuir",
   "brokerGuaranteeCode": "Código de Broker Guarantee",
   "personalID": "EU IRIA",
   "Collaborator": "Colaborador",
