added trading page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "mainMenu dailyTechnicalReport": "Daily Technical Report",
   "mainMenu market": "Market",
   "mainMenu economicCalendar": "Economic Calendar",
   "mainMenu operations": "Operations",
