--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "mainMenu dailyTechnicalReport": "Reporte Técnico Diario",
   "mainMenu market": "Mercado",
   "mainMenu economicCalendar": "Calendario Económico",
   "mainMenu operations": "Operaciones",
