--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -1,4 +1,5 @@
 {
+  "mainMenu dailyTechnicalReport": "Relatório Técnico Diário",
   "mainMenu market": "Mercado",
   "mainMenu economicCalendar": "Calendário Econômico",
   "mainMenu operations": "Operações",
