--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -132,6 +132,7 @@
   "wt bankName": "Nombre del Banco",
   "wt remittance": "Remesa",
   "wt localBank": "Banco Local",
+  "wt lastRequestDate": "Fecha de la última solicitud",
   "wt currencyType": "Moneda de Transferencia",
   "wt accountWithdrawalRequest": "La cuenta para retiro de fondos",
   "wt accountDetail": "Detalles de Cuenta",
