--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -112,6 +112,7 @@
   "occupation": "Occupation",
   "buyBrokerGuarantee": "Buy Broker Guarantee",
   "brokerName": "Name of the broker that you want to assign",
+  "brokerName2": "Name of the second broker that you want to assign",
   "brokerGuaranteeCode": "Broker Guarantee Code",
   "personalID": "Personal ID",
   "Collaborator": "Collaborator",
