--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -112,6 +112,7 @@
   "occupation": "Ocupación",
   "buyBrokerGuarantee": "Compra Broker Guarantee",
   "brokerName": "Nombre del corredor que desea asignar",
+  "brokerName2": "Nombre del segundo corredor que desea asignar",
   "brokerGuaranteeCode": "Código de Broker Guarantee",
   "personalID": "Identificación",
   "Collaborator": "Colaborador",
