--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -112,6 +112,7 @@
   "occupation": "Ocupação",
   "buyBrokerGuarantee": "Compra Broker Guarantee",
   "brokerName": "Nome do corretor que você deseja atribuir",
+  "brokerName2": "Nome do segundo corretor que você deseja atribuir",
   "brokerGuaranteeCode": "Código de Broker Guarantee",
   "personalID": "EU IRIA",
   "Collaborator": "Colaborador",
